Kubernetes/kubernetes/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-srv
  labels:
    app: nginx
spec:
  selector:
    app: nginx #1
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
